# cprojectchat

MesTCP/: CMakeLists.txt
MesTCP/client/include/: net_client.h
MesTCP/client/src/: Client.cpp
MesTCP/include/: net_common.h  net_connection.h  net_message.h  net_queue.h
MesTCP/server/include/: net_server.h
MesTCP/server/src/: Server.cpp
